--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,22 @@ body{
 .navbar-inverse {
      background-color: #512DA8;
 }
+.tab-content {
+    border-width:0px 1px 1px 1px;
+    border-color: #ddd;
+    border-style: solid;
+    padding: 10px;
+}
+
+.carousel {
+    background:#512DA8;
+}
+.carousel-item {
+  height: 300px;
+}
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
